# Color-Picker

./: CMakeLists.txt  LICENSE  README.md  build.bat
res/: app.rc
src/: app.cpp  app.h  colorsampler.cpp  colorsampler.h  main.cpp  resource.h  trayicon.cpp  trayicon.h
